--- a/src/css/style.css
+++ b/src/css/style.css
@@ -906,6 +906,9 @@ img {
   padding-right: 50px;
   margin-left: auto;
   margin-right: auto;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 .inner-fluid,
 .container-fluid {
@@ -4654,6 +4657,155 @@ img {
   max-height: -webkit-max-content;
   max-height: -moz-max-content;
   max-height: max-content;
+}
+
+.doctor-banner {
+  position: relative;
+  height: 540px;
+}
+.doctor-banner .bg {
+  position: absolute;
+  height: 100%;
+}
+.doctor-banner .bg img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center left;
+     object-position: center left;
+}
+.doctor-banner .photo {
+  position: absolute;
+  right: 0;
+  height: 100%;
+  width: 55%;
+}
+.doctor-banner .photo img {
+  -webkit-mask-image: -webkit-gradient(linear, right top, left top, color-stop(50%, black), to(rgba(0, 0, 0, 0)));
+  -webkit-mask-image: linear-gradient(to left, black 50%, rgba(0, 0, 0, 0) 100%);
+          mask-image: -webkit-gradient(linear, right top, left top, color-stop(50%, black), to(rgba(0, 0, 0, 0)));
+          mask-image: linear-gradient(to left, black 50%, rgba(0, 0, 0, 0) 100%);
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center right;
+     object-position: center right;
+}
+.doctor-banner .h3 {
+  padding-top: 130px;
+  margin-bottom: 28px;
+}
+.doctor-banner .speciality p {
+  color: #343544;
+  font-size: 20px;
+  font-size: 1.25rem;
+  font-weight: 600;
+  line-height: 140%;
+  margin-bottom: 20px;
+}
+.doctor-banner .experience {
+  margin-bottom: 26px;
+}
+.doctor-banner .experience p {
+  color: #343544;
+  font-size: 20px;
+  font-size: 1.25rem;
+  font-weight: 400;
+  line-height: 140%;
+  margin-bottom: 2px;
+}
+.doctor-banner .experience p b {
+  font-weight: 500;
+}
+
+.education {
+  padding-top: 80px;
+  padding-bottom: 80px;
+}
+.education-item {
+  background-color: #fff;
+  border-radius: 12px;
+  -webkit-box-shadow: 0px 6px 30px 0px rgba(43, 47, 137, 0.15);
+          box-shadow: 0px 6px 30px 0px rgba(43, 47, 137, 0.15);
+  padding: 20px 40px 40px;
+}
+.education-item:not(:last-child) {
+  margin-bottom: 32px;
+}
+.education-item .title {
+  border-bottom: 2px solid #319DAC;
+  padding: 20px;
+}
+.education-item .title svg {
+  width: 68px;
+  height: 68px;
+  display: inline-block;
+  vertical-align: middle;
+  margin-right: 20px;
+}
+.education-item .title .h4 {
+  display: inline-block;
+  vertical-align: middle;
+  font-size: 24px;
+  font-size: 1.5rem;
+  font-weight: 600;
+  line-height: 133.333%;
+}
+.education-item .content-item {
+  min-height: 63px;
+  padding-top: 5px;
+  padding-bottom: 3px;
+  padding-left: 32px;
+  padding-right: 20px;
+  border-bottom: 2px solid #CDF3F9;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.education-item .content-item-year {
+  display: inline-block;
+  vertical-align: middle;
+}
+.education-item .content-item-year p {
+  color: #BD5B9E;
+  font-size: 20px;
+  font-size: 1.25rem;
+  font-weight: 600;
+  line-height: 140%;
+  margin-bottom: 0;
+  margin-right: 30px;
+  max-width: 50px;
+}
+.education-item .content-item-info {
+  display: inline-block;
+  vertical-align: middle;
+}
+.education-item .content-item-info p {
+  font-size: 20px;
+  font-size: 1.25rem;
+  font-weight: 400;
+  line-height: 155%;
+  letter-spacing: 0.0125rem;
+  margin-bottom: 0;
+}
+
+.diploms {
+  padding-top: 80px;
+  padding-bottom: 38px;
+}
+.diploms .h4 {
+  text-align: center;
+  font-weight: 600;
+  line-height: 133.333%;
+  margin-bottom: 60px;
+}
+.diploms .slider-four .slider-arrows {
+  margin-top: 33px;
 }
 
 .footer {
