--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -2789,6 +2789,159 @@
   }
 }
 
+// doctor
+.doctor {
+  &-banner {
+    position: relative;
+    height: 540px;    
+
+    .bg {
+      position: absolute;
+      height: 100%;
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center left;
+      }
+    }
+
+    .photo {
+      position: absolute;
+      right: 0;
+      height: 100%;
+      width: 55%;
+      img {
+        mask-image: linear-gradient(to left, rgba(0,0,0,1) 50%, rgba(0,0,0,0) 100%);
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center right;
+      }
+    }
+
+    .h3 {
+      padding-top: 130px;
+      margin-bottom: 28px;
+    }
+
+    .speciality {
+      p {
+        color:$gray_dark;
+        @include fz(20);      
+        font-weight: 600;
+        line-height: 140%;
+        margin-bottom: 20px;
+      }
+    }
+    .experience {
+      margin-bottom: 26px;
+      p {
+        color:$gray_dark;
+        @include fz(20);      
+        font-weight: 400;
+        line-height: 140%;
+        margin-bottom: 2px;
+        b {
+          font-weight: 500;
+        }
+      }
+      
+    }
+  }  
+}
+
+.education {
+  padding-top: 80px;
+  padding-bottom: 80px;
+
+  &-item {
+    background-color: #fff;
+    border-radius: 12px;
+    box-shadow: 0px 6px 30px 0px rgba(43, 47, 137, 0.15);
+    padding: 20px 40px 40px;
+    &:not(:last-child) {
+      margin-bottom: 32px;
+    }
+
+    .title {
+      border-bottom: 2px solid $primary;
+      padding: 20px;
+
+      svg {
+        width: 68px;
+        height: 68px;
+        display: inline-block;
+        vertical-align: middle;
+        margin-right: 20px;
+      }
+
+      .h4 {
+        display: inline-block;
+        vertical-align: middle;
+        @include fz(24);        
+        font-weight: 600;
+        line-height: 133.333%;
+      }
+    }
+
+    .content {
+      &-item {
+        min-height: 63px;
+        padding-top: 5px;
+        padding-bottom: 3px;
+        padding-left: 32px;
+        padding-right: 20px;
+        border-bottom: 2px solid $bgc;
+        display: flex;
+        align-items: center;
+       
+        &-year {
+          display: inline-block;
+          vertical-align: middle;
+          p {
+            color: $bgc-pink;
+            @include fz(20);           
+            font-weight: 600;
+            line-height: 140%;
+            margin-bottom: 0;
+            margin-right: 30px;
+            max-width: 50px;            
+          }
+        }
+        &-info {
+          display: inline-block;
+          vertical-align: middle;
+          p {
+            @include fz(20);            
+            font-weight: 400;
+            line-height: 155%;
+            @include ls(0.2);
+            margin-bottom: 0;
+          }
+        }
+      }
+
+    }
+  }
+}
+
+.diploms {
+  padding-top: 80px;
+  padding-bottom: 38px;
+
+  .h4 {
+    text-align: center;
+    font-weight: 600;
+    line-height: 133.333%;
+    margin-bottom: 60px;
+  }
+
+  .slider-four .slider-arrows {
+    margin-top: 33px;
+  }
+}
+
 .footer {
   color: #fff;
   background-color: $footer;
