--- a/src/css/style.css
+++ b/src/css/style.css
@@ -779,6 +779,7 @@ img {
 }
 
 .ui-field {
+  position: relative;
   display: inline-block;
   width: 400px;
 }
@@ -4806,6 +4807,45 @@ img {
 }
 .diploms .slider-four .slider-arrows {
   margin-top: 33px;
+}
+
+.mfp-popup {
+  max-width: 560px;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+}
+.mfp-popup-inner .feedback-wrapper {
+  background-color: #BD5B9E;
+  border-radius: 12px;
+  -webkit-box-shadow: 0px 6px 30px 0px rgba(43, 47, 137, 0.15);
+          box-shadow: 0px 6px 30px 0px rgba(43, 47, 137, 0.15);
+  padding: 48px 60px 60px;
+}
+.mfp-popup-inner .feedback-wrapper .h3 {
+  color: #FFF;
+  font-size: 32px;
+  font-size: 2rem;
+  font-weight: 600;
+  line-height: 145.938%;
+  letter-spacing: 0.06rem;
+  text-transform: uppercase;
+  margin-bottom: 48px;
+}
+.mfp-popup-inner .feedback-wrapper .ui-field {
+  width: 100%;
+  margin-bottom: 40px;
+}
+.mfp-popup button.mfp-close {
+  font-size: 0;
+}
+.mfp-popup button.mfp-close::after {
+  position: absolute;
+  top: 54px;
+  right: 57px;
+  width: 32px;
+  height: 32px;
+  content: url("data:image/svg+xml,%3Csvg width='32' height='32' viewBox='0 0 32 32' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg clip-path='url(%23clip0_1833_5135)'%3E%3Cpath d='M8 7.51465L24.9706 24.4852' stroke='white' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M8 24.4854L24.9706 7.51479' stroke='white' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0_1833_5135'%3E%3Crect width='32' height='32' fill='white'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E%0A");
 }
 
 .footer {
