--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -2942,6 +2942,47 @@
   }
 }
 
+.mfp-popup {
+  max-width: 560px;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  &-inner {    
+    .feedback-wrapper {
+      background-color: $bgc-pink;     
+      border-radius: 12px;     
+      box-shadow: 0px 6px 30px 0px rgba(43, 47, 137, 0.15);
+      padding: 48px 60px 60px;      
+
+      .h3 {
+        color: #FFF;
+        @include fz(32);        
+        font-weight: 600;
+        line-height: 145.938%;
+        @include ls(0.96);       
+        text-transform: uppercase;
+        margin-bottom: 48px;
+      }
+
+      .ui-field {
+        width: 100%;
+        margin-bottom: 40px;
+      }
+    }
+  }
+  button.mfp-close {
+    font-size: 0;
+    &::after {
+      position: absolute;
+      top: 54px; 
+      right: 57px;
+      width: 32px;
+      height: 32px;    
+      content: url("data:image/svg+xml,%3Csvg width='32' height='32' viewBox='0 0 32 32' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg clip-path='url(%23clip0_1833_5135)'%3E%3Cpath d='M8 7.51465L24.9706 24.4852' stroke='white' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M8 24.4854L24.9706 7.51479' stroke='white' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0_1833_5135'%3E%3Crect width='32' height='32' fill='white'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E%0A");
+    }
+  }
+}
+
 .footer {
   color: #fff;
   background-color: $footer;
