--- a/src/sass/_ui.scss
+++ b/src/sass/_ui.scss
@@ -306,7 +306,7 @@ img {
 .ui-field {	
 	// border-radius: 30px;	
 	// overflow: hidden;
-	// position: relative;	
+	position: relative;	
 	// display: flex;
 	// align-items: center;	
 	display: inline-block;
