--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3337,7 +3337,7 @@ img {
   padding-bottom: 80px;
 }
 .main .installment-title {
-  max-width: 679px;
+  max-width: 530px;
   text-align: center;
   font-size: 20px;
   font-size: 1.25rem;
@@ -4846,6 +4846,230 @@ img {
   width: 32px;
   height: 32px;
   content: url("data:image/svg+xml,%3Csvg width='32' height='32' viewBox='0 0 32 32' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg clip-path='url(%23clip0_1833_5135)'%3E%3Cpath d='M8 7.51465L24.9706 24.4852' stroke='white' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M8 24.4854L24.9706 7.51479' stroke='white' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0_1833_5135'%3E%3Crect width='32' height='32' fill='white'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E%0A");
+}
+
+.vacancies-banner {
+  position: relative;
+  height: 540px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.vacancies-banner .bg {
+  position: absolute;
+  height: 100%;
+}
+.vacancies-banner .bg img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center left;
+     object-position: center left;
+}
+.vacancies-banner .photo {
+  position: absolute;
+  right: 0;
+  height: 100%;
+  width: 55%;
+}
+.vacancies-banner .photo img {
+  -webkit-mask-image: -webkit-gradient(linear, right top, left top, color-stop(50%, black), to(rgba(0, 0, 0, 0)));
+  -webkit-mask-image: linear-gradient(to left, black 50%, rgba(0, 0, 0, 0) 100%);
+          mask-image: -webkit-gradient(linear, right top, left top, color-stop(50%, black), to(rgba(0, 0, 0, 0)));
+          mask-image: linear-gradient(to left, black 50%, rgba(0, 0, 0, 0) 100%);
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center right;
+     object-position: center right;
+}
+.vacancies-banner .h2 {
+  margin-bottom: 28px;
+}
+.vacancies-list {
+  padding-top: 80px;
+  padding-bottom: 80px;
+}
+.vacancies-list-wrapper {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  margin-left: auto;
+  margin-right: auto;
+}
+.vacancies-list .h4 {
+  text-align: center;
+  font-size: 24px;
+  font-size: 1.5rem;
+  font-weight: 600;
+  line-height: 133.333%;
+  max-width: 700px;
+  margin-bottom: 30px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.vacancies-list .service-content-item {
+  max-width: 476px;
+  border-radius: 12px;
+  background-color: #FFF;
+  -webkit-box-shadow: 0px 6px 30px 0px rgba(43, 47, 137, 0.15);
+          box-shadow: 0px 6px 30px 0px rgba(43, 47, 137, 0.15);
+  padding: 40px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 30px !important;
+}
+.vacancies-list .service-content-item ul {
+  margin-bottom: 0;
+}
+.vacancies-list .service-content-item li {
+  font-size: 20px;
+  font-size: 1.25rem;
+  font-weight: 400;
+  line-height: 155%;
+  letter-spacing: 0.0125rem;
+  padding: 12px 20px;
+  border-bottom: 1px solid #CDF3F9;
+  margin-bottom: 0 !important;
+}
+.vacancies-list .service-content-item li::before {
+  content: "";
+  margin-top: 4px !important;
+  margin-left: 4px;
+  margin-bottom: auto;
+}
+.vacancies-list .service-content-item li a {
+  color: #222340;
+}
+.vacancies-list p {
+  text-align: center;
+  font-size: 18px;
+  font-size: 1.125rem;
+  font-weight: 500;
+  line-height: 121.111%;
+  letter-spacing: 0.03375rem;
+  margin-bottom: 30px;
+}
+.vacancies-list a.ui-btn {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+}
+.vacancies-benefits {
+  padding-top: 80px;
+  padding-bottom: 80px;
+}
+.vacancies-benefits .h3 {
+  text-align: center;
+  line-height: 145.938%;
+  letter-spacing: 0.06rem;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+}
+.vacancies-benefits .h5 {
+  max-width: 420px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  font-weight: 400;
+  line-height: 155.556%;
+  letter-spacing: 0.0225rem;
+  margin-bottom: 60px;
+}
+.vacancies-benefits-item {
+  height: 100%;
+  border-radius: 12px;
+  background: #FFF;
+  -webkit-box-shadow: 0px 6px 30px 0px rgba(43, 47, 137, 0.15);
+          box-shadow: 0px 6px 30px 0px rgba(43, 47, 137, 0.15);
+  padding: 24px;
+}
+.vacancies-benefits-item svg {
+  width: 64px;
+  height: 64px;
+  margin-bottom: 24px;
+}
+.vacancies-benefits-item .h4 {
+  font-weight: 600;
+  line-height: 133.333%;
+  margin-bottom: 20px;
+}
+.vacancies-benefits-item p {
+  font-size: 18px;
+  font-size: 1.125rem;
+  font-weight: 400;
+  line-height: 155.556%;
+  letter-spacing: 0.0225rem;
+  margin-bottom: 0;
+}
+.vacancies-contacts {
+  padding-top: 80px;
+  padding-bottom: 80px;
+}
+.vacancies-contacts-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 594px;
+}
+.vacancies-contacts-wrapper .contacts-map-wrapper {
+  height: 100%;
+  padding-right: 44px;
+  width: 63%;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 63%;
+          flex: 0 0 63%;
+}
+.vacancies-contacts-wrapper .contacts-links-col {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 100%;
+  padding-left: 36px;
+  width: 37%;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 37%;
+          flex: 0 0 37%;
+}
+.vacancies-contacts-wrapper .contacts-links {
+  padding-left: 126px;
+  padding-right: 126px;
+  height: 100%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 28px;
+  margin-bottom: 0;
+  border-radius: 12px;
+  -webkit-box-shadow: 0px 6px 30px 0px rgba(43, 47, 137, 0.15);
+          box-shadow: 0px 6px 30px 0px rgba(43, 47, 137, 0.15);
+}
+.vacancies-contacts-wrapper .contacts-links .contacts-links-item:not(:last-child) {
+  margin-bottom: 28px;
+}
+.vacancies-contacts-wrapper .contacts-links .contacts-links-wrapper:last-child {
+  -webkit-box-align: initial;
+      -ms-flex-align: initial;
+          align-items: initial;
+}
+
+.vacancies-gallery {
+  padding-bottom: 42px;
 }
 
 .footer {
