--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -1454,7 +1454,7 @@
   padding-bottom: 80px;
 
   &-title {     
-    max-width: 679px;
+    max-width: 530px;
     text-align: center;
     @include fz(20);      
     font-weight: 500;
@@ -2981,6 +2981,218 @@
       content: url("data:image/svg+xml,%3Csvg width='32' height='32' viewBox='0 0 32 32' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg clip-path='url(%23clip0_1833_5135)'%3E%3Cpath d='M8 7.51465L24.9706 24.4852' stroke='white' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M8 24.4854L24.9706 7.51479' stroke='white' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0_1833_5135'%3E%3Crect width='32' height='32' fill='white'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E%0A");
     }
   }
+}
+
+// vacancies
+.vacancies {
+  &-banner {
+    position: relative;
+    height: 540px;
+    display: flex;
+    align-items: center;  
+
+    .bg {
+      position: absolute;
+      height: 100%;
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center left;
+      }
+    }
+
+    .photo {
+      position: absolute;
+      right: 0;
+      height: 100%;
+      width: 55%;
+      img {
+        mask-image: linear-gradient(to left, rgba(0,0,0,1) 50%, rgba(0,0,0,0) 100%);
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center right;
+      }
+    }
+
+    .h2 {
+      margin-bottom: 28px;
+    }   
+  }
+
+  &-list {
+    padding-top: 80px;
+    padding-bottom: 80px;
+
+    &-wrapper {     
+      justify-content: center;
+      width: max-content;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    .h4 {      
+      text-align: center;
+      @include fz(24);     
+      font-weight: 600;
+      line-height: 133.333%;
+      max-width: 700px;
+      margin-bottom: 30px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    .service-content-item {
+      max-width: 476px;
+      border-radius: 12px;
+      background-color: #FFF;   
+      box-shadow: 0px 6px 30px 0px rgba(43, 47, 137, 0.15);
+      padding: 40px;
+      margin-left: auto;
+      margin-right: auto;
+      margin-bottom: 30px !important;
+
+      ul {
+        margin-bottom: 0;
+      }
+
+      li {
+        @include fz(20);       
+        font-weight: 400;
+        line-height: 155%;
+        @include ls(0.2);        
+        padding: 12px 20px;
+        border-bottom: 1px solid $bgc;
+        margin-bottom: 0 !important;
+        &::before {
+          content: "";     
+          margin-top: 4px !important;
+          margin-left: 4px;
+          margin-bottom: auto;      
+        }
+        a {
+          color: $font;
+        }   
+      }
+    }
+
+    p {     
+      text-align: center;
+      @include fz(18);      
+      font-weight: 500;
+      line-height: 121.111%;
+      @include ls(0.54);
+      margin-bottom: 30px;
+    }
+
+    a.ui-btn {
+      margin-left: auto;
+      margin-right: auto;
+      display: block;
+      width: max-content;      
+    }
+  }
+
+  &-benefits {
+    padding-top: 80px;
+    padding-bottom: 80px;
+
+    .h3 {    
+      text-align: center;    
+      line-height: 145.938%;
+      @include ls(0.96);      
+      text-transform: uppercase;
+      margin-bottom: 20px;
+    }
+
+    .h5 {
+      max-width: 420px;
+      margin-left: auto;
+      margin-right: auto;
+      text-align: center;   
+      font-weight: 400;
+      line-height: 155.556%;
+      @include ls(0.36);
+      margin-bottom: 60px;     
+    }
+
+    &-item {
+      height: 100%;
+      border-radius: 12px;
+      background: #FFF;    
+      box-shadow: 0px 6px 30px 0px rgba(43, 47, 137, 0.15);
+      padding: 24px;
+
+      svg {
+        width: 64px;
+        height: 64px;
+        margin-bottom: 24px;
+      }
+
+      .h4 {      
+        font-weight: 600;
+        line-height: 133.333%;
+        margin-bottom: 20px;
+      }
+
+      p {
+        @include fz(18);       
+        font-weight: 400;
+        line-height:155.556%;
+        @include ls(0.36);
+        margin-bottom: 0;    
+      }
+    }
+  }
+
+  &-contacts {
+    padding-top: 80px;
+    padding-bottom: 80px;
+
+    &-wrapper {
+      display: flex;
+      height: 594px;
+
+      .contacts-map-wrapper {
+        height: 100%;
+        padding-right: 44px;
+        width: 63%;      
+        flex: 0 0 63%;
+      }
+
+      .contacts-links-col {
+        display: flex;
+        height: 100%;
+        padding-left: 36px;
+        width: 37%;        
+        flex: 0 0 37%;
+      }
+
+      .contacts-links {
+        padding-left: 126px;
+        padding-right: 126px;
+        height: 100%;       
+        flex-direction: column;
+        justify-content: center;
+        // align-items: center;
+        gap: 28px;
+        margin-bottom: 0;
+        border-radius: 12px;      
+        box-shadow: 0px 6px 30px 0px rgba(43, 47, 137, 0.15);
+        .contacts-links-item:not(:last-child) {
+          margin-bottom: 28px;
+      }
+        .contacts-links-wrapper:last-child {
+          align-items: initial;
+        }
+      }
+    }    
+  }  
+}
+
+.vacancies-gallery {
+  padding-bottom: 42px;
 }
 
 .footer {
